--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
               <a href="#home" class="nav__link hover:text-secondaryColor duration-200">Home</a>
             </li>
             <li>
-              <a href="#abaut" class="nav__link hover:text-secondaryColor duration-200">Abaut</a>
+              <a href="#about" class="nav__link hover:text-secondaryColor duration-200">About</a>
             </li>
             <li>
               <a href="#menu" class="nav__link hover:text-secondaryColor duration-200" >Menu</a>
